--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "puppet",
-  "version": "1.0.0",
-  "description": "A puppeteer demo application",
+  "version": "1.1.0",
+  "description": "A simple Instagram Image Parser",
   "main": "index.js",
   "dependencies": {
-    "puppeteer": "^1.10.0"
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
