multiple images parsing done, images now open in browser once parsing complete

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple Instagram Image Parser",
   "main": "index.js",
   "dependencies": {
+    "opn": "^5.4.0",
     "request": "^2.88.0"
   },
   "devDependencies": {},
