--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "opn": "^5.4.0",
     "request": "^2.88.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.27.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
